--- a/style/login.css
+++ b/style/login.css
@@ -31,7 +31,14 @@
   color: #1C3144;
 }
 
-
+@media (min-width: 600px) {
+  .toggle-password {
+    position: absolute;
+    right: 30%;
+    top: 51.5%;
+    transform: translateY(-50%);
+  }
+}
 
 .body-login {
   overflow: hidden;
