--- a/style/login.css
+++ b/style/login.css
@@ -24,9 +24,9 @@
 
 .toggle-password {
   position: absolute;
-  right: 80px;
+  right: 90px;
   /* Ajusta el valor en px en lugar de % */
-  top: 285px;
+  top: 445px;
   transform: translateY(-50%);
   cursor: pointer;
   color: #1C3144;
@@ -112,6 +112,15 @@
   .toggle-password {
     position: absolute;
     right: 35%;
+    top: 51.5%;
+    transform: translateY(-50%);
+  }
+}
+
+@media (min-width: 600px) {
+  .toggle-password {
+    position: absolute;
+    right: 30%;
     top: 51.5%;
     transform: translateY(-50%);
   }
